fix: Add proper performance score calculation to summary.json
- Fixed calculateOverallPerformanceScore to use the new scoring formula
- Added calculateAverageLatency method to SummaryGenerator
- Updated calculatePerformanceGrade to use the new grade thresholds
- Performance score in summary.json now shows actual calculated values:
  - Micro: 559.82 (exceptional, uncapped score)
  - Integration: 70.79 (Grade C)
- All 12 SummaryGeneratorTest tests passing

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>